# Manila-Dental-Clara-Asist-Voz

./: .gitignore  BRIEF_CALLIA.md  CLAUDE.md  README.md  daniela.config.yaml  pyproject.toml  sofia.config.yaml
app/: config.py  main.py  outbound_worker.py
app/services/: notion_service.py
app/webhooks/: retell_handler.py
dashboard/: .env.example  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/configuracion/: page.tsx  settings-form.tsx
dashboard/src/app/leads/: page.tsx
dashboard/src/app/llamadas/: page.tsx
dashboard/src/components/: shell.tsx  sidebar.tsx
dashboard/src/lib/: config.ts
scripts/: customize.py  finish_setup.py  optimize_latency.py  setup.py  setup_sip.py  status.py  test_services.py  wire_tools.py
